--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
       </section>
       <section>
-
+        <h1>made by mayankjain</h1>
       </section>
     </main>
     <script src="script.js"></script>
