--- a/index.html
+++ b/index.html
@@ -179,9 +179,10 @@
                 <input id="buttonform" type="submit" value="Get Started >">
             </form>
         </div>
-      </section>
-      <section>
-      </section>
+        </section>
+        <footer>
+        <h2>Made by Mayank Jain with &hearts;</h2>
+        </footer>
     </main>
     <script src="script.js"></script>
   </body>
